--- a/values.yaml
+++ b/values.yaml
@@ -1027,6 +1027,7 @@ meshGateway:
               release: "{{ .Release.Name }}"
               component: mesh-gateway
           topologyKey: kubernetes.io/hostname
+
   # Optional YAML string to specify tolerations.
   tolerations: null
 
@@ -1150,6 +1151,7 @@ ingressGateways:
                 release: "{{ .Release.Name }}"
                 component: ingress-gateway
             topologyKey: kubernetes.io/hostname
+
     # Optional YAML string to specify tolerations.
     tolerations: null
 
@@ -1190,6 +1192,7 @@ ingressGateways:
 # Requirements: consul >= 1.8.0 and consul-k8s >= 0.16.0 if using
 # global.acls.manageSystemACLs.
 terminatingGateways:
+  # Enable terminating gateway deployment. Requires `connectInject.enabled=true`.
   enabled: false
 
   # Defaults sets default values for all gateway fields. With the exception
@@ -1210,6 +1213,7 @@ terminatingGateways:
     #          path: path  # secret will now mount to /consul/userconfig/my-secret/path
     extraVolumes: []
 
+    # Resource limits for all terminating gateway pods
     resources:
       requests:
         memory: "100Mi"
